--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -64,9 +64,6 @@
           <a class="btn-login-user" href="pages/login.html">Login</a>
         </div>
       </div>
-<!--      <div class="col-lg-5 order-1 order-lg-5 text-center text-lg-start">-->
-<!--        <img src="assets/img/cars/index9.png" class="img-fluid" alt="" data-aos="zoom-out" data-aos-delay="300" style="width: 100%">-->
-<!--      </div>-->
     </div>
   </div>
 </section>
@@ -200,13 +197,7 @@
 <!--        Sign Up for Access-->
         <p>Get Started <span>with</span> Easy Car Rental</p>
       </div>
-
-      <div class="row g-0">
-
-<!--        <div class="col-lg-4 register-img sectionBorder"-->
-<!--             data-aos="zoom-out" data-aos-delay="200"-->
-<!--             style="background-image: url(assets/img/Customer_form.jpeg);"></div>-->
-
+      <div>
         <div class="d-flex align-items-center register-form-bg sectionBorder">
           <form action="customer" class="reg-customer-form" data-aos="fade-up" data-aos-delay="100"
                 id="customerForm"
@@ -440,19 +431,19 @@
 
     <ul class="nav justify-content-center mt-2 ">
       <li class="nav-item ">
-        <a class="nav-link text-light" href="#">Home</a>
+        <a class="nav-link text-light" href="#"><i class="bi bi-house-fill">Home</i></a>
       </li>
       <li class="nav-item ">
-        <a class="nav-link text-light " href="#about">About</a>
+        <a class="nav-link text-light " href="#about"><i class="bi bi-globe-americas">About</i></a>
       </li>
       <li class="nav-item ">
-        <a class="nav-link text-light " href="#cars">Car</a>
+        <a class="nav-link text-light " href="#cars"><i class="bi bi-car-front-fill">Cars</i></a>
       </li>
       <li class="nav-item ">
-        <a class="nav-link text-light " href="#Register-customer-new">Register</a>
+        <a class="nav-link text-light " href="#Register-customer-new"><i class="bi bi-person-check-fill">Register</i></a>
       </li>
       <li class="nav-item ">
-        <a class="nav-link text-light " href="#contact">Contact</a>
+        <a class="nav-link text-light " href="#contact"><i class="bi bi-envelope-at-fill">Contact</i></a>
       </li>
     </ul>
     <div class="container ">
