--- a/Front_End/pages/adminDashboard.html
+++ b/Front_End/pages/adminDashboard.html
@@ -116,7 +116,6 @@
 
             <li class="nav-item">
                 <a class="nav-link " href="adminDashboard.html">
-                    <i class="bi bi-grid"></i>
                     <span>Dashboard</span>
                 </a>
             </li>
@@ -124,7 +123,7 @@
 
             <li class="nav-item">
                 <a class="nav-link collapsed" data-bs-target="#forms-nav" data-bs-toggle="collapse" href="#">
-                    <i class="bi bi-kanban"></i><span>Manage</span><i class="bi bi-chevron-down ms-auto"></i>
+                    <span>Manage</span><i class="bi bi-chevron-down ms-auto"></i>
                 </a>
                 <ul id="forms-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
                     <li>
@@ -148,8 +147,8 @@
 
             <li class="nav-item">
                 <a class="nav-link collapsed" data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">
-                    <i class="bi bi-layout-text-window-reverse"></i><span>Details</span><i
-                        class="bi bi-chevron-down ms-auto"></i>
+                    <span>Details</span>
+                    <i class="bi bi-chevron-down ms-auto"></i>
                 </a>
                 <ul id="components-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
                     <li>
@@ -168,21 +167,18 @@
 
             <li class="nav-item">
                 <a class="nav-link collapsed" href="adminPages/CusomerRequest.html" id="myDetailsSection">
-                    <i class="bi bi-kanban"></i>
                     <span>Rent Request</span>
                 </a>
             </li>
 
             <li class="nav-item">
                 <a class="nav-link collapsed" href="adminPages/IncomeDetails.html" id="incomeDetails">
-                    <i class="bi bi-kanban"></i>
                     <span>Income Details</span>
                 </a>
             </li>
 
             <li class="nav-item">
                 <a class="nav-link collapsed" href="login.html">
-                    <i class="bi bi-box-arrow-in-right"></i>
                     <span>LogOut</span>
                 </a>
             </li>
@@ -291,7 +287,7 @@
                         <div class="col-xxl-4 col-md-3">
                             <div class="card info-card driver-card">
                                 <div class="card-body">
-                                    <h5 class="card-title">Available Driver <span>| Today</span></h5>
+                                    <h5 class="card-title">Available Driver <span>|<br>Today</span></h5>
 
                                     <div class="d-flex align-items-center">
                                         <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
@@ -310,7 +306,7 @@
                         <div class="col-xxl-4 col-md-3">
                             <div class="card info-card driver-card">
                                 <div class="card-body">
-                                    <h5 class="card-title">UnAvailable Driver <span>| Today</span></h5>
+                                    <h5 class="card-title">UnAvailable Driver <span>|<br>Today</span></h5>
 
                                     <div class="d-flex align-items-center">
                                         <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
@@ -329,7 +325,7 @@
                         <div class="col-xxl-4 col-md-3">
                             <div class="card info-card customers-card">
                                 <div class="card-body">
-                                    <h5 class="card-title">Customers <span>|<br>All Type</span></h5>
+                                    <h5 class="card-title">Customers <span>|<br> All Type</span></h5>
 
                                     <div class="d-flex align-items-center">
                                         <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
@@ -384,7 +380,7 @@
                         <div class="col-xxl-4 col-md-3">
                             <div class="card info-card booking-card">
                                 <div class="card-body">
-                                    <h5 class="card-title">Booking<span>|<br>All Type</span></h5>
+                                    <h5 class="card-title">Booking <span>|<br>All Type</span></h5>
                                     <div class="d-flex align-items-center">
                                         <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
                                             <i class="bi bi-clipboard-pulse"></i>
@@ -402,7 +398,7 @@
                         <div class="col-xxl-4 col-md-3">
                             <div class="card info-card booking-card">
                                 <div class="card-body">
-                                    <h5 class="card-title">Booking Pending<span>| Today</span></h5>
+                                    <h5 class="card-title">Booking Pending <span>| Today</span></h5>
                                     <div class="d-flex align-items-center">
                                         <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
                                             <i class="bi bi-clipboard2-data"></i>
