--- a/Front_End/pages/adminPages/RentDetails.html
+++ b/Front_End/pages/adminPages/RentDetails.html
@@ -114,7 +114,6 @@
 
             <li class="nav-item">
                 <a class="nav-link " href="../adminDashboard.html">
-                    <i class="bi bi-grid"></i>
                     <span>Dashboard</span>
                 </a>
             </li>
@@ -122,7 +121,7 @@
 
             <li class="nav-item">
                 <a class="nav-link collapsed" data-bs-target="#forms-nav" data-bs-toggle="collapse" href="#">
-                    <i class="bi bi-kanban"></i><span>Manage</span><i class="bi bi-chevron-down ms-auto"></i>
+                    <span>Manage</span><i class="bi bi-chevron-down ms-auto"></i>
                 </a>
                 <ul id="forms-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
                     <li>
@@ -146,8 +145,8 @@
 
             <li class="nav-item">
                 <a class="nav-link collapsed" data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">
-                    <i class="bi bi-layout-text-window-reverse"></i><span>Details</span><i
-                        class="bi bi-chevron-down ms-auto"></i>
+                    <span>Details</span>
+                    <i class="bi bi-chevron-down ms-auto"></i>
                 </a>
                 <ul id="components-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
                         <a href="PaymentDetails.html">
@@ -165,21 +164,18 @@
 
             <li class="nav-item">
                 <a class="nav-link collapsed" href="CusomerRequest.html" id="myDetailsSection">
-                    <i class="bi bi-kanban"></i>
                     <span>Rent Request</span>
                 </a>
             </li>
 
             <li class="nav-item">
                 <a class="nav-link collapsed" href="IncomeDetails.html" id="incomeDetails">
-                    <i class="bi bi-kanban"></i>
                     <span>Income Details</span>
                 </a>
             </li>
 
             <li class="nav-item">
                 <a class="nav-link collapsed" href="../login.html">
-                    <i class="bi bi-box-arrow-in-right"></i>
                     <span>LogOut</span>
                 </a>
             </li>
