--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -311,7 +311,7 @@
             <i class="icon bi bi-map flex-shrink-0 "></i>
             <div>
               <h3>Our Address</h3>
-              <p>No. 25,Galle Road,Matara.</p>
+              <p> No. 200, Galle Road, Panadura</p>
             </div>
           </div>
         </div>
@@ -398,7 +398,7 @@
           <i class="bi bi-geo-alt icon "></i>
           <div>
             <h4>Address</h4>
-            <p> No. 25,Galle Road,<br> Matara.</p>
+            <p>  No. 200, Galle Road,<br> Panadura.</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 footer-links d-flex ">
